--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -49,13 +49,13 @@
     "\n",
     "1. **Dataset Selection**: After the ETL process, we select the relevant attributes (features) for our model from the available dataset. It's preferable to perform any necessary aggregations or feature engineering in the ETL phase.\n",
     "\n",
-    "2. **Splitting**: The dataset is split into a training set and a test set. Neural Networks or Multi-Layer Perceptrons might further split the training set to get a validation set.\n",
+    "2. **Encode Categorical**: Categorical columns are typically one-hot encoded or label encoded to convert them into a numerical format that the model can understand.\n",
     "\n",
-    "3. **Balancing**: In cases where the target classes are imbalanced, various techniques like upsampling, downsampling, or creating an ensemble split can be employed to balance the classes.\n",
+    "3. **Splitting**: The dataset is split into a training set and a test set. Neural Networks or Multi-Layer Perceptrons might further split the training set to get a validation set.\n",
     "\n",
-    "4. **Regularization/Normalization**: We provide options to use different scaling techniques to normalize numerical attributes.\n",
+    "4. **Balancing**: In cases where the target classes are imbalanced, various techniques like upsampling, downsampling, or creating an ensemble split can be employed to balance the classes.\n",
     "\n",
-    "5. **Encode Categorical**: Categorical columns are typically one-hot encoded or label encoded to convert them into a numerical format that the model can understand.\n",
+    "5. **Regularization/Normalization**: We provide options to use different scaling techniques to normalize numerical attributes.\n",
     "\n",
     "6. **Model Selection**: At this point, a machine learning model is selected. This could be a manual selection or an automatic one where different models are tested, and the best performing one is chosen based on predefined metrics. Hyperparameters could either be manually defined or selected using techniques like grid search or random search.\n",
     "\n",
@@ -113,8 +113,24 @@
    "metadata": {},
    "source": [
     "---\n",
+    "# Training RandomForest Models with Python\n",
+    "\n",
+    "In this Jupyter notebook, we walk through the process of training a RandomForest machine learning model using Python. We will use various powerful libraries including pandas for data manipulation, Imbalanced-learn for handling class imbalance, and Scikit-learn for model training and evaluation. RandomForest is an ensemble learning method that operates by constructing a multitude of decision trees at training time and outputting the class that is the mode of the classes or mean prediction of the individual trees. It can be applied to both classification and regression problems. This notebook aims to provide a comprehensive example of how to handle a practical machine learning task using RandomForest.\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>\n",
+    "<br>\n",
+    "\n",
+    "# Import dependencies\n",
+    "\n",
+    "The cell below shows different was of importing libraries and classes within them. From the cell below, we can see that the `import` statement can be used to import a library, and the `from` statement can be used to import a class from a library. The `as` statement can be used to rename a library or class. The `*` statement can be used to import all classes from a library. The `import` statement can also be used to import a class from a library and rename it. We can also import classes and methods from other files in our repository.\n"
    ]
   },
   {
@@ -128,8 +144,7 @@
     "import pandas as pd\n",
     "import sqlalchemy as sq\n",
     "import sys, os\n",
-    "import pickle\n",
-    "from imblearn.combine import SMOTEENN, SMOTETomek\n",
+    "from imblearn.combine import SMOTEENN\n",
     "from xgboost import XGBRFClassifier\n",
     "from sklearn.ensemble import (  # type: ignore\n",
     "    RandomForestClassifier,\n",
@@ -153,6 +168,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Jupyter cell output settings\n",
+    "\n",
+    "Here we modify the default settings for the Jupyter notebook cells to show more rows and columns."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -168,7 +193,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "setting up a dataset"
+    "# 1. Dataset Selection\n",
+    "\n",
+    "Here we create SQL statements to select the data from the database. We will use the following tables: \n",
+    "- dataset_cross_monthly_sat\n",
+    "- ergot_sample_feat_eng\n",
+    "\n",
+    "To select all columns from a table, we use the following syntax: \n",
+    "\n",
+    "```sql\n",
+    "SELECT * FROM table_name\n",
+    "```\n",
+    "\n",
+    "To select specific columns from a table, we use the following syntax: \n",
+    "\n",
+    "```sql\n",
+    "SELECT column_name1, column_name2 FROM table_name\n",
+    "```\n",
+    "\n",
+    "To see which columns are available in this project, refer to the readme or use pgAdmin to view the tables.\n"
    ]
   },
   {
@@ -177,24 +220,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "weatherStationQuery = sq.text(\n",
-    "    \"\"\"\n",
-    "    SELECT * from dataset_cross_monthly_station\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
     "weatherSatQuery = sq.text(\n",
     "    \"\"\"\n",
     "    SELECT * from dataset_cross_monthly_sat\n",
-    "\"\"\"\n",
-    ")\n",
-    "\n",
-    "ergotPrevYearsAggQuery = sq.text(\n",
-    "    \"\"\"\n",
-    "    SELECT year, district, \n",
-    "    present_prev1, present_prev2, present_prev3,\n",
-    "    percnt_true_prev1, percnt_true_prev2, percnt_true_prev3 \n",
-    "    from agg_ergot_sample_v2\n",
     "\"\"\"\n",
     ")\n",
     "\n",
@@ -206,6 +234,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we use getConn to get a connection to the database. We then use the connection with pandas read_sql to get a pandas dataframe of the data requested by the SQL statements. \n",
+    "del is a memory saving command that deletes the variable from memory after it is no longer needed. This is useful for large dataframes that take up a lot of memory."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -213,13 +250,19 @@
    "source": [
     "conn = getConn(\"./.env\")\n",
     "\n",
-    "# stationDf = pd.read_sql(weatherStationQuery, conn)\n",
     "satelliteDf = pd.read_sql(weatherSatQuery, conn)\n",
-    "ergotPrevDf = pd.read_sql(ergotPrevYearsAggQuery, conn)\n",
     "ergotTargetDf = pd.read_sql(ergotTargetQuery, conn)\n",
     "\n",
     "conn.close()\n",
     "del conn"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we use the pandas merge function to merge the two dataframes on the common columns year and district. Since the ergot table has our target variable, we will use a left join to keep all the rows in the ergot table."
    ]
   },
   {
@@ -229,23 +272,30 @@
    "outputs": [],
    "source": [
     "# merge on year and district\n",
-    "# tempdf = pd.merge(satelliteDf, ergotPrevDf, on=[\"year\", \"district\"], how=\"left\")\n",
-    "# del satelliteDf\n",
-    "# del ergotPrevDf\n",
-    "tempdf = satelliteDf\n",
-    "# tempdf = stationDf\n",
-    "\n",
-    "# merge on year and district\n",
-    "datasetDf = pd.merge(ergotTargetDf, tempdf, on=[\"year\", \"district\"], how=\"left\")\n",
-    "del ergotTargetDf\n",
-    "del tempdf"
+    "datasetDf = pd.merge(ergotTargetDf, satelliteDf, on=[\"year\", \"district\"], how=\"left\")\n",
+    "del ergotTargetDf"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "categorical values [one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html)  \n"
+    "# 2. Encode categorical values \n",
+    "\n",
+    "When we encounter categorical data, we have to convert it to numbers because machine learning models work with numerical data. One way to convert categorical data to numerical data is to encode it into binary vectors, a process known as [One-Hot Encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html).\n",
+    "\n",
+    "Here's how it works:\n",
+    "\n",
+    "For each category in the feature, one-hot encoding creates a binary (0/1) feature corresponding to each category in the original feature. Each of these binary features will be \"1\" when the original feature is equal to the corresponding category and \"0\" otherwise.\n",
+    "\n",
+    "Let's take an example of a feature named \"Color\". This feature has three categories: \"Red\", \"Green\", and \"Blue\". One-hot encoding this feature would result in three new features: \"Is_Red\", \"Is_Green\", and \"Is_Blue\". If an instance of our data had \"Color\" = \"Red\", then \"Is_Red\" would be 1, while \"Is_Green\" and \"Is_Blue\" would both be 0.\n",
+    "\n",
+    "So, in summary, one-hot encoding transforms a categorical feature with n categories into n binary features, with only one active.\n",
+    "\n",
+    "This method is widely used because it doesn't assume any order of the categories, which can be very helpful when the categorical feature is nominal (i.e., there's no inherent order among the categories). However, it can increase the dimensionality of the dataset dramatically if the categorical feature has many unique categories, which can potentially lead to the curse of dimensionality. This is a situation where the feature space is so high that the learning becomes much harder.\n",
+    "\n",
+    "Below, we use Pandas [get_dummies()](https://pandas.pydata.org/docs/reference/api/pandas.get_dummies.html) function to one-hot encode the categorical features in our dataset."
    ]
   },
   {
@@ -266,10 +316,53 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "splitting the dataset"
+    "# 3. Splitting the dataset\n",
+    "\n",
+    "There are multiple ways to split the dataset into training and testing sets. [Scikit provides a few methods and classes](https://scikit-learn.org/stable/modules/classes.html#module-sklearn.model_selection)\n",
+    "\n",
+    "### Splitter Classes\n",
+    "\n",
+    "1. **GroupKFold**: A variant of K-Fold cross-validator that ensures the same group is not represented in both testing and training sets.\n",
+    "\n",
+    "2. **GroupShuffleSplit**: A variation of ShuffleSplit, which returns randomized folds, with the constraint that the same group will not appear in two different folds.\n",
+    "\n",
+    "3. **KFold**: A standard K-Folds cross-validator that divides all the samples into k groups of samples, of equal or almost equal size.\n",
+    "\n",
+    "4. **LeaveOneGroupOut**: A cross-validation object that returns training set indices for each iteration, such that the same group does not appear in two different folds.\n",
+    "\n",
+    "5. **LeavePGroupsOut**: A cross-validator creating training/testing indices to split data according to a third-party provided group, ensuring the same group is not in both testing and training sets.\n",
+    "\n",
+    "6. **LeaveOneOut**: A cross-validator that returns training and test indices with one observation removed from the training data for testing. \n",
+    "\n",
+    "7. **LeavePOut**: A cross-validator that creates all the possible training/test sets by removing p samples from the complete set.\n",
+    "\n",
+    "8. **PredefinedSplit**: A cross-validator generating a user-defined pre-computed cross-validation split.\n",
+    "\n",
+    "9. **RepeatedKFold**: A cross-validator that repeats K-Fold n times with different randomization in each repetition.\n",
+    "\n",
+    "10. **RepeatedStratifiedKFold**: A cross-validator which returns stratified folds, with each set contains approximately the same percentage of samples of each target class as the complete set.\n",
+    "\n",
+    "11. **ShuffleSplit**: A cross-validator generating a user-defined number of independent train/test dataset splits. \n",
+    "\n",
+    "12. **StratifiedKFold**: A cross-validator returning stratified folds, with each fold contains roughly the same proportions of the different types of class labels.\n",
+    "\n",
+    "13. **StratifiedShuffleSplit**: A cross-validator that returns randomized stratified folds.\n",
+    "\n",
+    "14. **StratifiedGroupKFold**: A variation of StratifiedKFold, where samples are grouped.\n",
+    "\n",
+    "15. **TimeSeriesSplit**: A variation of k-fold which is suitable for time-series data.\n",
+    "\n",
+    "### Splitter Functions\n",
+    "\n",
+    "1. **check_cv**: A utility function to check the cv parameter and return a cross-validator.\n",
+    "\n",
+    "2. **train_test_split**: A function to split arrays or matrices into random train and test subsets. The splitting is random, and the proportion of train to test can be specified.\n",
+    "\n",
+    "Below we use a much simpler method, since the dataset has a time component, most random splitters will not work. We will use 2016-2020 of the data as the test set.\n"
    ]
   },
   {
@@ -282,6 +375,14 @@
     "trainDf = extractYears(datasetDf, 1995, 2015)\n",
     "testDf = extractYears(datasetDf, 2016, 2020)\n",
     "del datasetDf"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we drop the year since it is not a factor in predicting ergot. For example 2020 is a bigger number than 2010 but this has no bearing on the amount of ergot in the crop."
    ]
   },
   {
@@ -300,7 +401,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "balancing the dataset https://imbalanced-learn.org/stable/\n",
+    "# 4. Balancing the dataset  \n",
     "\n"
    ]
   },
