--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -402,7 +402,34 @@
    "metadata": {},
    "source": [
     "# 4. Balancing the dataset  \n",
-    "\n"
+    "\n",
+    "Class imbalance is a common problem in machine learning where the total number of a class of data (positive) is far less than the total number of another class of data (negative). This problem is predominant in scenarios where anomaly detection is crucial like fraudulent transactions in banking, diagnosing medical conditions, or in spam filtering where the data is usually skewed. \n",
+    "\n",
+    "Traditional machine learning algorithms are often biased towards the majority class, not taking the data distribution into consideration. In the worst case, minority classes are treated as outliers and ignored. For some cases, such as fraud detection or cancer prediction, we would need to carefully configure our model or artificially balance the dataset, as minority classes can be of utmost importance.\n",
+    "\n",
+    "Hence, the need for class balancers. Class balancing techniques basically help to balance our dataset in such a way that the model gets a balanced view of the classes. There are several ways to approach this issue:\n",
+    "\n",
+    "1. **Under-sampling**: The aim is to balance class distribution by randomly eliminating majority class examples. This is done until the majority and minority class instances are balanced out.\n",
+    "\n",
+    "2. **Over-sampling**: This is used when the quantity of data is insufficient. It tries to balance class distribution by randomly increasing minority class examples by replicating them.\n",
+    "\n",
+    "3. **SMOTE (Synthetic Minority Over-sampling Technique)**: SMOTE is an over-sampling method. It creates synthetic instances of the minority class.\n",
+    "\n",
+    "4. **Adaptive synthetic sampling (ADASYN)**: ADASYN is an algorithm that generates synthetic data, and its main advantage is that it doesn't create redundant data.\n",
+    "\n",
+    "The library `imblearn` provides many methods to handle imbalanced datasets, such as the above-mentioned techniques.\n",
+    "\n",
+    "It's important to remember that there's no guarantee that over-sampling or under-sampling will improve model performance, and these techniques may not always be appropriate. The choice to use balancing methods should be driven by the specific problem context and a thorough exploratory data analysis (EDA).\n",
+    "\n",
+    "\n",
+    "Below we see the class imbalance in our training and test sets.  \n",
+    "trainDf  \n",
+    "False    122202  \n",
+    "True       2082  \n",
+    "  \n",
+    "testDf  \n",
+    "False    26307  \n",
+    "True      1016  \n"
    ]
   },
   {
@@ -430,6 +457,30 @@
     "# print value counts downgrade\n",
     "print(trainDf[\"downgrade\"].value_counts())\n",
     "print(testDf[\"downgrade\"].value_counts())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Dealing with missing data is an important part of the data cleaning process, as missing data can lead to biased or incorrect results. Here are several strategies to handle missing data:\n",
+    "\n",
+    "1. **Deleting Rows**: This method commonly used to handle the null values. Here, we either delete a particular row if it has a null value for a particular feature and a particular column if it has more than 70-75% of missing values. This method is advised only when there are enough samples in the dataset.\n",
+    "\n",
+    "2. **Replacing with Mean/Median/Mode**: This strategy can be applied on a feature which has numeric data like the age of a person or the ticket fare. We can calculate the mean, median or mode of the feature and replace it with the missing values. This is an approximation which can add variance to the dataset but might yield better results compared to removal of rows and columns. Replacing with the above three approximations are a statistical approach to handle the missing values.\n",
+    "\n",
+    "3. **Assigning an Unique Category**: If a categorical feature has missing values, then we can introduce a new category for those missing values. This will let the algorithm identify that there's something different about these instances.\n",
+    "\n",
+    "4. **Predicting Missing Values**: In this case, we divide our data into two sets: one set with no missing values (it will be our training set), and another one with missing values (it will be our test set). We can now use methods like logistic regression or decision trees to predict and fill missing values.\n",
+    "\n",
+    "5. **Using Algorithms Which Support Missing Values**: Few algorithms like Random Forest and XGBoost, can handle missing values without requiring any explicit preprocessing. They do it by using internal mechanisms, which can be very useful and save time.\n",
+    "\n",
+    "6. **Imputation Using Multivariate Imputation by Chained Equation (MICE)**: This is a statistical technique for imputing missing values by modeling each feature with missing values as a function of other features in a round-robin fashion.\n",
+    "\n",
+    "Remember, it's important to understand why data is missing before treating it, as data could be missing for a variety of reasons, and understanding the underlying reason will help you make the best decision.  \n",
+    "\n",
+    "Here we use the simplest method of dealing with rows that have some missing values, deletion."
    ]
   },
   {
@@ -465,6 +516,11 @@
     "# drop nan\n",
     "trainDf = trainDf.dropna()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
