--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -409,13 +409,11 @@
     "\n",
     "Hence, the need for class balancers. Class balancing techniques basically help to balance our dataset in such a way that the model gets a balanced view of the classes. There are several ways to approach this issue:\n",
     "\n",
-    "1. **Under-sampling**: The aim is to balance class distribution by randomly eliminating majority class examples. This is done until the majority and minority class instances are balanced out.\n",
+    "1. [**Under-sampling**](https://imbalanced-learn.org/stable/references/under_sampling.html): The aim is to balance class distribution by randomly eliminating majority class examples. This is done until the majority and minority class instances are balanced out.\n",
     "\n",
-    "2. **Over-sampling**: This is used when the quantity of data is insufficient. It tries to balance class distribution by randomly increasing minority class examples by replicating them.\n",
+    "2. [**Over-sampling**](https://imbalanced-learn.org/stable/references/over_sampling.html): This is used when the quantity of data is insufficient. It tries to balance class distribution by randomly increasing minority class examples by replicating them.\n",
     "\n",
-    "3. **SMOTE (Synthetic Minority Over-sampling Technique)**: SMOTE is an over-sampling method. It creates synthetic instances of the minority class.\n",
-    "\n",
-    "4. **Adaptive synthetic sampling (ADASYN)**: ADASYN is an algorithm that generates synthetic data, and its main advantage is that it doesn't create redundant data.\n",
+    "3. [**Combination methods**](https://imbalanced-learn.org/stable/references/combine.html): These are a combination of over-sampling and under-sampling.\n",
     "\n",
     "The library `imblearn` provides many methods to handle imbalanced datasets, such as the above-mentioned techniques.\n",
     "\n",
@@ -518,9 +516,26 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "**SMOTEENN** is a method that combines over-sampling and under-sampling, using SMOTE (Synthetic Minority Over-sampling Technique) and ENN (Edited Nearest Neighbours) respectively.\n",
+    "\n",
+    "1. **SMOTE**: It works by creating synthetic samples from the minor class instead of creating copies. The algorithm selects two or more similar instances (using a distance measure) and perturbing an instance one attribute at a time by a random amount within the difference to the neighboring instances.\n",
+    "\n",
+    "2. **ENN**: It is an under-sampling technique that removes instances of the majority class that are misclassified by KNN (k-Nearest Neighbours) with k=3 (by default). It aims to clean overlapping areas between classes.\n",
+    "\n",
+    "The SMOTEENN method is a two-step process:\n",
+    "\n",
+    "- First, it over-samples the minority class by generating synthetic examples through SMOTE.\n",
+    "\n",
+    "- Next, it cleans the data space resulting from over-sampling by removing the instances of the majority class that are misclassified by the ENN rule. This helps in pruning the instances of the majority class that are near the borderline and that invade the minority class space, causing difficulty in learning.\n",
+    "\n",
+    "By combining over-sampling (adding instances) and under-sampling (removing instances), SMOTEENN tends to provide a well-balanced class distribution and better performance on imbalanced datasets.\n",
+    "\n",
+    "However, it's important to keep in mind that no method is universally best for all imbalanced datasets. The appropriate method should be chosen based on the dataset characteristics and the learning algorithm being used.\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -561,7 +576,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### normalization / scaling\n",
+    "# 5. Normalization / Scaling / Regularization\n",
     "some blurb about scalers  \n",
     "0 [MinMaxScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html)             \n",
     "1 [MaxAbsScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html)  \n",
