--- a/src/ModelBuilder.ipynb
+++ b/src/ModelBuilder.ipynb
@@ -577,14 +577,22 @@
    "metadata": {},
    "source": [
     "# 5. Normalization / Scaling / Regularization\n",
-    "some blurb about scalers  \n",
-    "0 [MinMaxScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html)             \n",
-    "1 [MaxAbsScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html)  \n",
-    "2 [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)  \n",
-    "3 [RobustScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html)  \n",
-    "4 [Normalizer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html)  \n",
-    "5 [PowerTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html)  \n",
-    "6 [QuantileTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html)  "
+    "Data preprocessing, which includes normalization, scaling, and regularization, plays a critical role in many machine learning models. Here's why these steps are important:\n",
+    "\n",
+    "1. **Normalization**: Normalization is a technique often applied as part of data preparation for machine learning. The goal of normalization is to change the values of numeric columns in the dataset to use a common scale, without distorting differences in the ranges of values or losing information. Normalization is essential for algorithms that rely on the magnitude of the feature vector or if the scale of features is relevant, as in K-Nearest Neighbors (KNN), Neural Networks, or any algorithms using distance based or gradient descent based methods.\n",
+    "\n",
+    "2. **Scaling**: Scaling is the process of converting an actual range of values into a standard range of values, typically in the interval [-1, 1] or [0, 1]. Some machine learning algorithms, like SVM or KNN, perform better when input numerical variables fall within a similar scale. In these algorithms, scaling can have a significant impact on the model's performance.\n",
+    "\n",
+    "In essence, these preprocessing techniques are crucial for certain machine learning models as they help reduce the computational burden, remove noise, prevent overfitting, and improve the overall performance of models.\n",
+    " \n",
+    "Scikit provides a few classes:\n",
+    "- [MinMaxScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MinMaxScaler.html)             \n",
+    "- [MaxAbsScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.MaxAbsScaler.html)  \n",
+    "- [StandardScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.StandardScaler.html)  \n",
+    "- [RobustScaler](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.RobustScaler.html)  \n",
+    "- [Normalizer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.Normalizer.html)  \n",
+    "- [PowerTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.PowerTransformer.html)  \n",
+    "- [QuantileTransformer](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.QuantileTransformer.html)  "
    ]
   },
   {
@@ -593,8 +601,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df = pd.DataFrame()\n",
-    "# scaled = scaleColumns(df, ['max_temp'], None, 1)"
+    "# scaler if needed"
    ]
   },
   {
@@ -602,41 +609,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "categorical values [one-hot encoding](https://scikit-learn.org/stable/modules/generated/sklearn.preprocessing.OneHotEncoder.html)  \n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# encoded = encodeColumns(df, ['max_temp'], None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def printMetrics(model_name, y_true, y_pred):\n",
-    "    print(model_name)\n",
-    "    print(\"Accuracy: \", accuracy_score(y_true, y_pred))\n",
-    "    print(\"Precision: \", precision_score(y_true, y_pred))\n",
-    "    print(\"Recall: \", recall_score(y_true, y_pred))\n",
-    "    print(\"F1: \", f1_score(y_true, y_pred))\n",
-    "    print(\"ROC AUC: \", roc_auc_score(y_true, y_pred))\n",
-    "    print(\"Classification Report: \\n\", classification_report(y_true, y_pred))\n",
-    "    print()"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "selecting a model"
+    "# 6. Model Selection\n",
+    "\n",
+    "Choosing the right model for a machine learning problem can be quite a task. You have to consider the problem at hand, the size and nature of your data, and the requirements of the project. Here are some general steps to guide you:\n",
+    "\n",
+    "1. **Understand the Problem**: Firstly, identify whether the problem is a regression problem, a classification problem, a clustering problem, or something else. Different algorithms are better suited to different types of problems.\n",
+    "\n",
+    "2. **Understand the Data**: Look at the data you have available. How many features do you have? How much data do you have? Is the data numeric, categorical, or a mix? Different algorithms are designed to handle different types of data. Also, some algorithms can handle lots of features or lots of examples better than others.\n",
+    "\n",
+    "3. **Consider the Trade-offs**: Every model comes with trade-offs. Some models are simpler to interpret but may not have the highest accuracy. Other models may be more accurate but take a longer time to train. Some models handle categorical features well but not numerical features, or vice versa. Some can handle missing data, others can't. You'll need to consider what's important for your specific problem.\n",
+    "\n",
+    "4. **Test Multiple Models**: Often the best way to choose a model is to try out several and see which one works best. You might start with a simple model like linear regression or k-nearest neighbors and then try more complex models like random forests or neural networks. Use cross-validation to get a reliable estimate of the model's performance.\n",
+    "\n",
+    "5. **Tune the Model**: Once you've chosen a model, you can use techniques like grid search or random search to find the optimal hyperparameters for your model. This can often significantly improve the model's performance.\n",
+    "\n",
+    "6. **Evaluate the Model**: Finally, once you have a model and have tuned its hyperparameters, you'll want to evaluate the model using an appropriate metric. This could be accuracy, precision, recall, F1-score, ROC-AUC, mean squared error, etc., depending on the problem and the business context.\n",
+    "\n",
+    "Remember, there is no one-size-fits-all algorithm or model in machine learning. The best approach often depends on the specific problem, the available data, and the context.\n",
+    "\n",
+    "Below we show how to set up RandomForest classifier models using sklearn, imblearn, and xgboost library implementations."
    ]
   },
   {
@@ -695,6 +686,16 @@
     "    max_depth=DEPTH,\n",
     "    n_jobs=CORES,\n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 6. Model Training\n",
+    "\n",
+    "Here we train the models using the fit() method using the training set"
    ]
   },
   {
@@ -777,7 +778,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "eval procedure"
+    "# 6. Model Evaluation\n",
+    "\n",
+    "We use the test set to evaluate our trained models"
    ]
   },
   {
@@ -791,6 +794,14 @@
     "\n",
     "# drop nan\n",
     "testDf = testDf.dropna()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we generate the predictions for the test set for each model to help us calculate performance metrics later on."
    ]
   },
   {
@@ -810,6 +821,14 @@
     "predictions_balance_xgbrf = model_balance_xgbrf.predict(\n",
     "    testDf.drop(columns=\"downgrade\")\n",
     ")"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we inspect the predictions to see the distribution of classes predicted by each model. We see that some only make one class prediction, e.g. it always chooses false for ergot"
    ]
   },
   {
@@ -847,6 +866,52 @@
     "print(pd.DataFrame(predictions_balanced_balanced).value_counts())\n",
     "print(pd.DataFrame(predictions_xgbrf).value_counts())\n",
     "print(pd.DataFrame(predictions_balance_xgbrf).value_counts())"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Evaluating the performance of a machine learning model is an important aspect of any ML project. These metrics help to understand how well the model is performing. Some key performance metrics include:\n",
+    "\n",
+    "1. **Accuracy**: Accuracy is the ratio of correctly predicted observations to the total observations. It is the most intuitive performance measure. However, accuracy is not a good choice with imbalanced classes.\n",
+    "\n",
+    "    `Accuracy = (True Positives + True Negatives) / Total Observations`\n",
+    "\n",
+    "2. **Precision**: Precision is the ratio of correctly predicted positive observations to the total predicted positive observations. High precision relates to the low false positive rate.\n",
+    "\n",
+    "    `Precision = True Positives / (True Positives + False Positives)`\n",
+    "\n",
+    "3. **Recall (Sensitivity)**: Recall is the ratio of correctly predicted positive observations to the all observations in actual class. Recall gives us an idea about when it's actually yes, how often does it predict yes.\n",
+    "\n",
+    "    `Recall = True Positives / (True Positives + False Negatives)`\n",
+    "\n",
+    "4. **F1 Score**: The F1 Score is the weighted average of Precision and Recall. It tries to find the balance between precision and recall. F1 Score reaches its best value at 1 (perfect precision and recall) and worst at 0.\n",
+    "\n",
+    "    `F1 Score = 2*(Recall * Precision) / (Recall + Precision)`\n",
+    "\n",
+    "5. **ROC-AUC**: Receiver Operating Characteristic - Area Under Curve (ROC-AUC) is a performance measurement for the classification problems at various threshold settings. ROC is a probability curve and AUC represents the degree or measure of separability. It tells how much the model is capable of distinguishing between classes. The higher the AUC, the better the model is at predicting 0s as 0s and 1s as 1s.\n",
+    "\n",
+    "\n",
+    "Below is a helper function to print model performance metrics."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def printMetrics(model_name, y_true, y_pred):\n",
+    "    print(model_name)\n",
+    "    print(\"Accuracy: \", accuracy_score(y_true, y_pred))\n",
+    "    print(\"Precision: \", precision_score(y_true, y_pred))\n",
+    "    print(\"Recall: \", recall_score(y_true, y_pred))\n",
+    "    print(\"F1: \", f1_score(y_true, y_pred))\n",
+    "    print(\"ROC AUC: \", roc_auc_score(y_true, y_pred))\n",
+    "    print(\"Classification Report: \\n\", classification_report(y_true, y_pred))\n",
+    "    print()"
    ]
   },
   {
