--- a/src/Models/SVM/SVMStation.ipynb
+++ b/src/Models/SVM/SVMStation.ipynb
@@ -1329,9 +1329,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False    27295\n",
+      "Name: count, dtype: int64\n",
+      "False    25969\n",
+      "True      1326\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "print(pd.DataFrame(predictions_svm).value_counts())\n",
     "print(pd.DataFrame(predictions_balanced_svm).value_counts())"
@@ -1352,9 +1364,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SVM imbalanced train set\n",
+      "Accuracy:  0.9627770653965928\n",
+      "Precision:  0.0\n",
+      "Recall:  0.0\n",
+      "F1:  0.0\n",
+      "ROC AUC:  0.5\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.96      1.00      0.98     26279\n",
+      "        True       0.00      0.00      0.00      1016\n",
+      "\n",
+      "    accuracy                           0.96     27295\n",
+      "   macro avg       0.48      0.50      0.49     27295\n",
+      "weighted avg       0.93      0.96      0.94     27295\n",
+      "\n",
+      "\n",
+      "SVM balanced train set\n",
+      "Accuracy:  0.9214508151676131\n",
+      "Precision:  0.0746606334841629\n",
+      "Recall:  0.09744094488188976\n",
+      "F1:  0.08454312553373185\n",
+      "ROC AUC:  0.5253748352401382\n",
+      "Classification Report: \n",
+      "               precision    recall  f1-score   support\n",
+      "\n",
+      "       False       0.96      0.95      0.96     26279\n",
+      "        True       0.07      0.10      0.08      1016\n",
+      "\n",
+      "    accuracy                           0.92     27295\n",
+      "   macro avg       0.52      0.53      0.52     27295\n",
+      "weighted avg       0.93      0.92      0.93     27295\n",
+      "\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/student/maith/CGC_Grain_Outcome_Predictions/.venv/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision is ill-defined and being set to 0.0 due to no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/student/maith/CGC_Grain_Outcome_Predictions/.venv/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/student/maith/CGC_Grain_Outcome_Predictions/.venv/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n",
+      "/home/student/maith/CGC_Grain_Outcome_Predictions/.venv/lib/python3.10/site-packages/sklearn/metrics/_classification.py:1344: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples. Use `zero_division` parameter to control this behavior.\n",
+      "  _warn_prf(average, modifier, msg_start, len(result))\n"
+     ]
+    }
+   ],
    "source": [
     "printMetrics(\"SVM imbalanced train set\", testDf[\"downgrade\"], predictions_svm)\n",
     "printMetrics(\n",
